[package]
name = "juniper_warp"
version = "0.5.2"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Juniper GraphQL integration with Warp"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_warp"
repository = "https://github.com/graphql-rust/juniper"
edition = "2018"

[features]
async = [ "juniper/async" ]

[dependencies]
warp = "0.2.1"
juniper = { version = "0.14.2", path = "../juniper", default-features = false  }
serde_json = "1.0.24"
serde_derive = "1.0.75"
failure = "0.1.2"
futures = "0.3.4"
serde = "1.0.75"
tokio = { version = "0.2.11", features = ["blocking"] }

[dev-dependencies]
bytes = "0.5.4"
juniper = { version = "0.14.2", path = "../juniper", features = ["expose-test-schema", "serde_json"] }
env_logger = "0.7.1"
log = "0.4.3"
percent-encoding = "2.1"
tokio = { version = "0.2.11", features = ["macros"] }
